# AMD-ACT-2-Hackathon-2026

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  PHASE1_RESULTS.md  PHASE2_RESULTS.md  QUICK_START_TOKEN_REDUCTION.md  README.md  SUBMISSION_CHECKLIST.md  TOKEN_REDUCTION_STRATEGIES.md  ZERO_TOKEN_PLAN.md  ZERO_TOKEN_SUMMARY.txt  arhictecture.md  doc.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  test_phase1_zero_tokens.py  test_phase2_integration.py  test_token_reduction.py
docker/: entrypoint.sh
engineering_analysis/: 01_project_overview.md  02_current_architecture.md  03_pipeline_walkthrough.md  04_engineering_decisions.md  05_git_history_analysis.md  06_architecture_evolution.md  07_failed_experiments.md  08_token_efficiency_analysis.md  09_performance_analysis.md  10_blog_outline.md
input/: tasks.json
scripts/: build_answer_cache.py  token_dashboard.py
src/: __init__.py  app.py  main.py
src/agent/: agent.py  executor.py  pipeline.py
src/config/: __init__.py  constants.py  logging.py  settings.py
src/io/: reader.py  validator.py  writer.py
src/llm/: __init__.py  client.py  parser.py  token_tracker.py
src/lookup/: __init__.py  answer_cache.json
src/models/: task.py
src/observability/: __init__.py  langsmith.py
tests/: test_code_debugging_agent.py  test_code_generation.py  test_logical_reasoning_agent.py  test_lookup.py  test_math_reasoning.py  test_orchestration.py  test_routing.py  test_shortcuts_math.py  test_text_summarization.py  test_token_budget.py
(+114 files in other folders)
